--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-First-Men-in-the-Moon_1013
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Wells, H. G. (Herbert George)
@@ -16,6 +19,8 @@ description: "The First Men in the Moon is a scientific romance published in 190
   \ and Cavor discover that the moon is inhabited by a sophisticated extraterrestrial\
   \ civilization of insect-like creatures they call \"Selenites\".\n From Wikipedia\
   \ (CC BY-SA)."
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/1013#The-First-Men-in-the-Moon
 gutenberg_bookshelf:
 - Science Fiction
 - Movie Books
